--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
   command = "pip install --upgrade pip setuptools wheel && pip install -r requirements.txt"
-  environment = { PYTHON_VERSION = "3.8" }  # or "3.9"
+  environment = { PYTHON_VERSION = "3.9" }  # Try "3.9" if needed
